src/test/deca/codegen/invalid/improvided/objetNonInstancie.ass.attendu
  ** IMA ** ERREUR ** Ligne 17 : 
    CMP avec op1 : adresse memoire et op2 : indefini
